[project]
name = "lssenv"
version = "0.1.0"
description = "lss analysis environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2.0",
    "jax",
    "camb>=1.6.5",
    "mpsort>=0.1.19",
    "pfft-python>=0.1.24",
    "pmesh>=0.1.59",
    "cosmoprimo>=1.0.0",
    "pyclass>=1.3.0",
    "matplotlib>=3.10.7",
    "pypower>=1.0.0",
    "sympy>=1.14.0",
    "numexpr>=2.14.1",
    "interpax>=0.3.12",
    "tabulate>=0.9.0",
    "anesthetic>=2.10.4",
    "getdist>=1.7.4",
    "emcee>=3.1.6",
    "iminuit>=2.32.0",
    "desilike",
    "pyrecon>=1.0.0",
    "pybird-lss>=0.2.0",
    "fitsio>=1.3.0",
    "scienceplots>=2.1.1",
    "eftpipe>=0.1.0",
    "classy>=3.2.2",
]

[tool.uv]
override-dependencies = [
  "pmesh @ file://${PROJECT_ROOT}/packages/pmesh"
]

[tool.uv.sources]
mpsort = { path = "packages/MP-sort" }
pfft-python = { path = "packages/pfft-python" }
pmesh = { path = "packages/pmesh" }
pyclass = { path = "packages/pyclass" }
pypower = { path = "packages/pypower" }
pyrecon = { path = "packages/pyrecon" }
classy = { path = "packages/class_public" }
desilike = { workspace = true }
pybird-lss = { workspace = true }
cosmoprimo = { workspace = true }
eftpipe = { workspace = true }

[tool.uv.workspace]
members = ["packages/cosmoprimo", "packages/desilike", "packages/pybird", "packages/eftpipe"]
exclude = []

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:cosmoprimo.*:"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=8.37.0",
    "pytest>=9.0.1",
]
